test/tests/compiler/18_structures/invalid_lex/plx1_use_in_line.plx
pub fn main(none) i32 {
    return use `ctype`
}
